# OrangeHRM_QA_Assignment

./: .env.example  .gitignore  README.md  answers.md  answers_2.md  behave.ini  pyproject.toml  requirements.txt  run_tests.py  setup.bat
.github/workflows/: playwright-behave.yml
config/: config.py
features/: auth_session.feature  environment.py  leave.feature  login.feature  logout.feature  pim.feature  user_management.feature
features/pages/: add_employee_page.py  admin_page.py  base_page.py  dashboard_page.py  employee_list_page.py  leave_list_page.py  login_page.py
features/pages/components/: sidebar_component.py
features/steps/: leave_steps.py  login_steps.py  logout_steps.py  pim_steps.py  user_management_steps.py
utils/: ai_client.py  api_helper.py  logger.py  self_healing.py
