[tool.poetry]
name = "orangehrm-automation"
version = "0.1.0"
description = "OrangeHRM Automation Suite using Playwright Python with Behave BDD"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.48.0"
behave = "^1.2.6"
python-dotenv = "^1.0.1"
allure-behave = "^2.13.5"
requests = "^2.32.3"
faker = "^30.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
